--- a/css/main.css
+++ b/css/main.css
@@ -148,12 +148,19 @@ color: #24272B;
 letter-spacing: 0.4px;
 }
 
-overline {
+.overline {
 font-family: "Work Sans", sans-serif;
 font-size: 12px;
 color: #000000;
 letter-spacing: 0.5px;
 text-transform: uppercase;
+}
+
+textarea {
+  border: none;
+  width: 100%;
+  font-family: "objektiv-mk2",sans-serif;
+  font-size: 14px;
 }
 
 /* Navbar  */
@@ -278,16 +285,20 @@ text-transform: uppercase;
 
 /* Post-its */
 .postit-ilike {
+  float: left;
   width: 128px;
   height: 128px;
   background-color: #ffe677;
   box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.1);
+  margin: 10px;
 }
 
 .postit-iwish {
+  float: left;
   width: 128px;
   height: 128px;
   background-color: #d4d3ff;
+  margin: 10px;
 }
 
 
@@ -326,4 +337,71 @@ text-transform: uppercase;
   height: 192px;
   background-color: #ffffff;
   background-color: var(--white-four);
+}
+
+
+
+
+/*main_piyum*/
+
+.project-card{
+  width : 30%;
+  height: 300px;
+  margin: 1%;
+  float: left;
+  padding : 20px;
+  background-color: white;
+  box-shadow: 2px 2px 1px lightgrey;
+
+}
+
+.project-card:hover{
+  background-color: lightgrey;
+  box-shadow: 2px 2px 1px grey;
+}
+
+.left{
+  width: 50%;
+  float: left;
+}
+
+.right{
+  width: 50%;
+  float: left;
+}
+
+.postit-small{
+  width:200px;
+  height: 200px;
+  margin: 10px;
+  background-color: yellow;
+  text-align: center;
+  float: left;
+}
+
+.postit{
+  width:200px;
+  height: 200px;
+  margin: 10px;
+  background-color: yellow;
+  text-align: center;
+  float: left;
+}
+
+.oppertunity{
+  width:500px;
+  margin: 10px;
+  padding: 10px;
+  box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.1);
+  display: flex;
+flex-direction: column;
+min-height: 20vh;
+}
+
+.hidden{
+  display: none;
+}
+
+.visible{
+  opacity: 1;
 }
