--- a/css/main_piyum.css
+++ b/css/main_piyum.css
@@ -33,11 +33,20 @@
   float: left;
 }
 
+.postit{
+  width:200px;
+  height: 200px;
+  margin: 10px;
+  background-color: yellow;
+  text-align: center;
+  float: left;
+}
+
 .oppertunity{
   width:500px;
   height: 500px;
   margin: 10px;
-  background-color: black;
+  background-color: grey;
   text-align: center;
 }
 
