--- a/css/main.css
+++ b/css/main.css
@@ -99,14 +99,14 @@ color: #000000;
 letter-spacing: 0.15px;
 }
 
-subtitle-1 {
+.subtitle-1 {
 font-family: "objektiv-mk2",sans-serif;
 font-size: 18px;
 color: #1E3888;
 letter-spacing: 0.17px;
 }
 
-subtitle-2 {
+.subtitle-2 {
 font-family: "objektiv-mk2",sans-serif;
 font-size: 14px;
 color: #1E3888;
@@ -114,7 +114,7 @@ font-weight: 500;
 letter-spacing: 0.1px;
 }
 
-body-1 {
+.body-1 {
 font-family: "objektiv-mk2",sans-serif;
 font-size: 16px;
 color: #000000;
@@ -122,7 +122,7 @@ letter-spacing: 0.5px;
 line-height: 26px;
 }
 
-body-2 {
+.body-2 {
 font-family: "objektiv-mk2",sans-serif;
 font-size: 14px;
 color: #5E6165;
@@ -130,7 +130,7 @@ letter-spacing: 0.25px;
 line-height: 22px;
 }
 
-button-text {
+.button-text {
 font-family: "Work Sans", sans-serif;
   font-size: 14px;
   font-weight: 500;
@@ -139,7 +139,7 @@ font-family: "Work Sans", sans-serif;
   text-transform: uppercase;
 }
 
-caption {
+.caption {
 font-family: "objektiv-mk2",sans-serif;
 font-size: 12px;
 font-weight: 400;
