--- a/css/main_2.css
+++ b/css/main_2.css
@@ -100,14 +100,14 @@ color: #000000;
 letter-spacing: 0.15px;
 }
 
-.subtitle-1 {
+subtitle-1 {
 font-family: "objektiv-mk2",sans-serif;
 font-size: 18px;
 color: #1E3888;
 letter-spacing: 0.17px;
 }
 
-.subtitle-2 {
+subtitle-2 {
 font-family: "objektiv-mk2",sans-serif;
 font-size: 14px;
 color: #1E3888;
@@ -115,7 +115,7 @@ font-weight: 500;
 letter-spacing: 0.1px;
 }
 
-.body-1 {
+body-1 {
 font-family: "objektiv-mk2",sans-serif;
 font-size: 16px;
 color: #000000;
@@ -123,7 +123,7 @@ letter-spacing: 0.5px;
 line-height: 26px;
 }
 
-.body-2 {
+body-2 {
 font-family: "objektiv-mk2",sans-serif;
 font-size: 14px;
 color: #5E6165;
@@ -131,7 +131,7 @@ letter-spacing: 0.25px;
 line-height: 22px;
 }
 
-.button-text {
+button-text {
 font-family: "Work Sans", sans-serif;
   font-size: 14px;
   font-weight: 500;
@@ -140,7 +140,7 @@ font-family: "Work Sans", sans-serif;
   text-transform: uppercase;
 }
 
-.caption {
+caption {
 font-family: "objektiv-mk2",sans-serif;
 font-size: 12px;
 font-weight: 400;
@@ -429,12 +429,12 @@ a.button-large{
 }
 
 .left{
-  width: 60%;
+  width: 50%;
   float: left;
 }
 
 .right{
-  width: 40%;
+  width: 50%;
   float: left;
 }
 
@@ -468,25 +468,6 @@ a.button-large{
   font-family: "Work Sans", sans-serif;
   font-size: 24px;
   font-weight: 500;
-  font-style: normal;
-  font-stretch: normal;
-  line-height: normal;
-  letter-spacing: 0.8px;
-  color: black;
-}
-
-.oppertunity .postit-text{
-  width:100%;
-  height: 100%;
-  padding: 5px;
-  border: none;
-  background-color: white;
-  resize: none;
-  outline: none;
-  overflow: visible;
-  font-family: "Work Sans", sans-serif;
-  font-size: 15px;
-  font-weight: 400;
   font-style: normal;
   font-stretch: normal;
   line-height: normal;
@@ -553,46 +534,9 @@ a.button-large{
   padding: 10px;
   box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.1);
   display: flex;
-  flex-direction: column;
+flex-direction: column;
+min-height: 20vh;
 }
-
-.drop-space{
-  height: 80px;
-  overflow-x: scroll;
-}
-
-.drop-space .postit-small{
-  width:75px;
-  height: 75px;
-  margin: 8px;
-  background-color: #fffc8d;
-  text-align: center;
-  overflow: scroll;
-}
-
- .drop-space .postit-text-small{
-  width:100%;
-  height: 100%;
-  padding: 2px;
-  border: none;
-  background-color: transparent;
-  resize: none;
-  outline: none;
-  overflow: visible;
-  font-family: "Work Sans", sans-serif;
-  font-size: 10px;
-  font-weight: 300;
-  font-style: normal;
-  font-stretch: normal;
-  line-height: normal;
-  letter-spacing: 0.8px;
-  color: black;
-}
-
-.drag-enter{
-  background-color: lightblue;
-}
-
 
 .hidden{
   display: none;
