--- a/css/main.css
+++ b/css/main.css
@@ -187,6 +187,36 @@ textarea {
   border-bottom: : none;
   background-color: white;
   padding: 20px;
+  z-index: 100;
+}
+
+.breadcrumbs{
+    z-index: 99;
+    height: 50px;
+    margin-left: 50px;
+}
+
+.bc-element{
+  float: left;
+  padding: 5px;
+}
+
+#bc-project{
+  font-family: "Work Sans", sans-serif;
+  font-size: 15px;
+  font-weight: 400;
+  color: #000000;
+  letter-spacing: 0.5px;
+  text-transform: uppercase;
+}
+
+#bc-module{
+  font-family: "Work Sans", sans-serif;
+  font-size: 15px;
+  font-weight: 600;
+  color: #000000;
+  letter-spacing: 0.5px;
+  text-transform: uppercase;
 }
 
 .menu{
@@ -373,13 +403,66 @@ a.button-large{
 }
 
 .cheat-card{
-  width: 160px;
-  height: 160px;
-  border-radius: 1px;
+  width: 200px;
+  height: 200px;
+  border-radius: 5px;
   background-color: #ffffff;
   border: solid 1px #b9b9b9;
   float: left;
   margin: 10px;
+  overflow:scroll;
+}
+
+.cheat-card-text{
+  width:100%;
+  height: 100%;
+  padding: 10px;
+  border: none;
+  background-color: transparent;
+  resize: none;
+  outline: none;
+  font-family: "Work Sans", sans-serif;
+  font-size: 20px;
+  font-weight: 400;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: normal;
+  letter-spacing: 0.8px;
+}
+
+.cheat-card-container{
+  margin: auto;
+  width: 670px;
+  height: 250px;
+}
+
+.idea-card{
+
+  width:200px;
+  height:200px;
+  margin: 10px auto;
+  margin-top: 30px;
+  background-color: #fffc8d;
+  text-align: center;
+
+}
+
+.idea-card-text{
+  width:100%;
+  height: 100%;
+  padding: 10px;
+  border: none;
+  background-color: transparent;
+  resize: none;
+  outline: none;
+  overflow: visible;
+  font-family: "Work Sans", sans-serif;
+  font-size: 24px;
+  font-weight: 500;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: normal;
+  letter-spacing: 0.8px;
 }
 
 .center{
@@ -492,6 +575,22 @@ a.button-large{
   line-height: normal;
   letter-spacing: 0.8px;
   color: black;
+}
+
+.prompt-card{
+    border-radius: 10px;
+    border: 2px solid darkblue;
+    padding: 10px;
+    width: 120px;
+    height: 90px;
+    margin: 10px;;
+    float: left;
+
+}
+
+.prompt-card:hover{
+    border: 4px solid darkblue;
+
 }
 
 .postit-small{
