--- a/css/main.css
+++ b/css/main.css
@@ -504,6 +504,10 @@ a.button-large{
   padding : 20px;
   background-color: white;
   box-shadow: 2px 2px 1px lightgrey;
+  -webkit-user-select: none; /* Safari */
+  -moz-user-select: none; /* Firefox */
+  -ms-user-select: none; /* IE10+/Edge */
+  user-select: none; /* Standard */
 
 }
 
