--- a/backend/public/main_2.css
+++ b/backend/public/main_2.css
@@ -100,14 +100,14 @@ color: #000000;
 letter-spacing: 0.15px;
 }
 
-.subtitle-1 {
+subtitle-1 {
 font-family: "objektiv-mk2",sans-serif;
 font-size: 18px;
 color: #1E3888;
 letter-spacing: 0.17px;
 }
 
-.subtitle-2 {
+subtitle-2 {
 font-family: "objektiv-mk2",sans-serif;
 font-size: 14px;
 color: #1E3888;
@@ -115,7 +115,7 @@ font-weight: 500;
 letter-spacing: 0.1px;
 }
 
-.body-1 {
+body-1 {
 font-family: "objektiv-mk2",sans-serif;
 font-size: 16px;
 color: #000000;
@@ -123,7 +123,7 @@ letter-spacing: 0.5px;
 line-height: 26px;
 }
 
-.body-2 {
+body-2 {
 font-family: "objektiv-mk2",sans-serif;
 font-size: 14px;
 color: #5E6165;
@@ -131,7 +131,7 @@ letter-spacing: 0.25px;
 line-height: 22px;
 }
 
-.button-text {
+button-text {
 font-family: "Work Sans", sans-serif;
   font-size: 14px;
   font-weight: 500;
@@ -140,7 +140,7 @@ font-family: "Work Sans", sans-serif;
   text-transform: uppercase;
 }
 
-.caption {
+caption {
 font-family: "objektiv-mk2",sans-serif;
 font-size: 12px;
 font-weight: 400;
@@ -180,48 +180,18 @@ textarea {
 .navibar {
   width: inherit;
   height: 100px;
-  /* position: sticky; */
-  /* position: -webkit-sticky; */
+  position: sticky;
+  position: -webkit-sticky;
   top: 0;
   border-top: 10px solid #ffe74c;
   border-bottom: : none;
   background-color: white;
   padding: 20px;
-  z-index: 100;
-}
-
-.breadcrumbs{
-    z-index: 99;
-    height: 50px;
-    margin-left: 50px;
-}
-
-.bc-element{
-  float: left;
-  padding: 5px;
-}
-
-#bc-project{
-  font-family: "Work Sans", sans-serif;
-  font-size: 15px;
-  font-weight: 400;
-  color: #000000;
-  letter-spacing: 0.5px;
-  text-transform: uppercase;
-}
-
-#bc-module{
-  font-family: "Work Sans", sans-serif;
-  font-size: 15px;
-  font-weight: 600;
-  color: #000000;
-  letter-spacing: 0.5px;
-  text-transform: uppercase;
 }
 
 .menu{
     position: absolute;
-    top: 35px;
+    bottom: 35px;
     right: 20px;
 }
 
@@ -234,7 +204,6 @@ textarea {
     color: black;
     z-index: 10;
 }
-
 
 ul{
     margin: 0;
@@ -404,66 +373,13 @@ a.button-large{
 }
 
 .cheat-card{
-  width: 200px;
-  height: 200px;
-  border-radius: 5px;
+  width: 160px;
+  height: 160px;
+  border-radius: 1px;
   background-color: #ffffff;
   border: solid 1px #b9b9b9;
   float: left;
   margin: 10px;
-  overflow:scroll;
-}
-
-.cheat-card-text{
-  width:100%;
-  height: 100%;
-  padding: 10px;
-  border: none;
-  background-color: transparent;
-  resize: none;
-  outline: none;
-  font-family: "Work Sans", sans-serif;
-  font-size: 20px;
-  font-weight: 400;
-  font-style: normal;
-  font-stretch: normal;
-  line-height: normal;
-  letter-spacing: 0.8px;
-}
-
-.cheat-card-container{
-  margin: auto;
-  width: 670px;
-  height: 250px;
-}
-
-.idea-card{
-
-  width:200px;
-  height:200px;
-  margin: 10px auto;
-  margin-top: 30px;
-  background-color: #fffc8d;
-  text-align: center;
-
-}
-
-.idea-card-text{
-  width:100%;
-  height: 100%;
-  padding: 10px;
-  border: none;
-  background-color: transparent;
-  resize: none;
-  outline: none;
-  overflow: visible;
-  font-family: "Work Sans", sans-serif;
-  font-size: 24px;
-  font-weight: 500;
-  font-style: normal;
-  font-stretch: normal;
-  line-height: normal;
-  letter-spacing: 0.8px;
 }
 
 .center{
@@ -491,6 +407,9 @@ a.button-large{
   background-color: var(--white-four);
 }
 
+
+
+
 /*main_piyum*/
 
 .project-card{
@@ -501,10 +420,6 @@ a.button-large{
   padding : 20px;
   background-color: white;
   box-shadow: 2px 2px 1px lightgrey;
-  -webkit-user-select: none; /* Safari */
-  -moz-user-select: none; /* Firefox */
-  -ms-user-select: none; /* IE10+/Edge */
-  user-select: none; /* Standard */
 
 }
 
@@ -514,12 +429,12 @@ a.button-large{
 }
 
 .left{
-  width: 60%;
+  width: 50%;
   float: left;
 }
 
 .right{
-  width: 40%;
+  width: 50%;
   float: left;
 }
 
@@ -558,41 +473,6 @@ a.button-large{
   line-height: normal;
   letter-spacing: 0.8px;
   color: black;
-}
-
-.oppertunity .postit-text{
-  width:100%;
-  height: 100%;
-  padding: 5px;
-  border: none;
-  background-color: white;
-  resize: none;
-  outline: none;
-  overflow: visible;
-  font-family: "Work Sans", sans-serif;
-  font-size: 15px;
-  font-weight: 400;
-  font-style: normal;
-  font-stretch: normal;
-  line-height: normal;
-  letter-spacing: 0.8px;
-  color: black;
-}
-
-.prompt-card{
-    border-radius: 10px;
-    border: 2px solid darkblue;
-    padding: 10px;
-    width: 200px;
-    height: 100px;
-    margin: 5px;;
-    float: left;
-
-}
-
-.prompt-card:hover{
-    border: 4px solid darkblue;
-
 }
 
 .postit-small{
@@ -654,46 +534,9 @@ a.button-large{
   padding: 10px;
   box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.1);
   display: flex;
-  flex-direction: column;
+flex-direction: column;
+min-height: 20vh;
 }
-
-.drop-space{
-  height: 80px;
-  overflow-x: scroll;
-}
-
-.drop-space .postit-small{
-  width:75px;
-  height: 75px;
-  margin: 8px;
-  background-color: #fffc8d;
-  text-align: center;
-  overflow: scroll;
-}
-
- .drop-space .postit-text-small{
-  width:100%;
-  height: 100%;
-  padding: 2px;
-  border: none;
-  background-color: transparent;
-  resize: none;
-  outline: none;
-  overflow: visible;
-  font-family: "Work Sans", sans-serif;
-  font-size: 10px;
-  font-weight: 300;
-  font-style: normal;
-  font-stretch: normal;
-  line-height: normal;
-  letter-spacing: 0.8px;
-  color: black;
-}
-
-.drag-enter{
-  background-color: lightblue;
-}
-
 
 .hidden{
   display: none;
