--- a/backend/public/main.css
+++ b/backend/public/main.css
@@ -52,7 +52,7 @@ Copy this into the head of the HTML files
 
 /* Text Styles */
 @import url('https://fonts.googleapis.com/css?family=Work+Sans:100,200,300,400,500,600,700,800,900');
-
+@import url("https://use.typekit.net/ztc2siz.css");
 h1 {
 font-family: "Work Sans", sans-serif;
   font-size: 96px;
@@ -85,11 +85,26 @@ letter-spacing: 0.25px;
 }
 
 h5 {
-font-family: "Work Sans", sans-serif;
-font-size: 24px;
-font-weight: 400;
-color: #000000;
-letter-spacing: 0;
+    font-family: "Work Sans", sans-serif;
+    font-size: 25px;
+    font-weight: 500;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: normal;
+    letter-spacing: 0.2px;
+    color: #1e3888;
+    padding-bottom:10px;
+}
+
+.card-text{
+  font-family: "Work Sans", sans-serif;
+  font-size: 15px;
+}
+
+.projects-list{
+  max-width: 1000px;
+  margin: auto;
+
 }
 
 h6 {
@@ -115,7 +130,7 @@ font-weight: 500;
 letter-spacing: 0.1px;
 }
 
-.body-1 {
+body {
 font-family: "objektiv-mk2",sans-serif;
 font-size: 16px;
 color: #000000;
@@ -334,6 +349,7 @@ li {
 
 /* Projects */
 .project-card {
+  position: relative;
   width: 250px;
   height: 250px;
   box-shadow: 0 2px 7px 0 rgba(0, 0, 0, 0.1);
@@ -342,8 +358,16 @@ li {
 }
 
 .project-card:hover{
-  background-color: #ffe74c;;
+  background-color: #ffe74c;
   box-shadow: 2px 2px 1px grey;
+}
+
+.people-list{
+  width: 85%;
+  border-top: solid 0.5px #979797;
+  position: absolute;
+  bottom: 15px;
+
 }
 
 /* .project-card{
@@ -487,8 +511,8 @@ a.button-large{
 .footer-bg {
   width: 1440px;
   height: 192px;
-  background-color: #ffffff;
-  background-color: var(--white-four);
+  /* background-color: #ffffff; */
+  /* background-color: var(--white-four); */
 }
 
 /*main_piyum*/
@@ -701,4 +725,31 @@ a.button-large{
 
 .visible{
   opacity: 1;
+}
+
+
+/* avatar */
+#avatar{
+  display: inline;
+  padding: 10px;
+}
+#avatar_img {
+  max-width: 60px;
+    height: auto;
+    overflow: hidden;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+    border-radius: 50%;
+
+}
+
+#avatar_nickname {
+  font-size: 18px;
+  display: inline;
+}
+
+#sign-out-button{
+  font-size: 12px;
 }
