--- a/client/client/src/css/main.css
+++ b/client/client/src/css/main.css
@@ -37,9 +37,38 @@ h2 {
   max-width: 1000px;
   margin: 10px auto;
 }
-
-.heading{
+.AllProjects h1{
   margin: 1%;
+  font-size: 34px;
+  font-weight: normal;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: normal;
+  letter-spacing: 0.3px;
+  color: #000000;
+}
+
+.AllProjectsHeader{
+  position: relative;
+}
+
+.NewButton{
+position: absolute;
+right:1%;
+top:10px;
+width: 157px;
+height: 36px;
+border-radius: 4px;
+border: solid 1px #1e3888;
+background-color:#fafafa;
+
+font-size: 14px;
+font-weight: 500;
+font-style: normal;
+font-stretch: normal;
+line-height: normal;
+letter-spacing: 0.8px;
+color: #1e3888;
 }
 
 
@@ -51,6 +80,34 @@ h2 {
       height: 300px;
       box-shadow: 0 2px 7px 0 rgba(0, 0, 0, 0.1);
       border: solid 0.5px #979797;
+      position: relative;
+}
+
+.ProjectCard h2{
+  font-size: 18px;
+  font-weight: 500;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: normal;
+  letter-spacing: 0.2px;
+  color: #1e3888;
+  padding-left: 10px
+}
+
+.ProjectCard p{
+  font-size: 12px;
+  font-weight: normal;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: normal;
+  letter-spacing: 0.4px;
+  padding-left: 10px
+}
+.UserList{
+width: 85%;
+border-top: solid 0.5px #979797;
+bottom: 15px;
+position: absolute;
 }
 
 
@@ -114,4 +171,77 @@ h2 {
   line-height: 1.6;
   letter-spacing: 0.2px;
   color: #000000;
+}
+
+
+.login_button{
+  position: absolute;
+  right: 50px;
+  top: 30px;
+  font-family: "Work Sans", sans-serif;
+  text-transform: uppercase;
+  font-size: 14px;
+  font-weight: normal;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: normal;
+  letter-spacing: 0.8px;
+  color: #000000;
+  cursor: pointer;
+  outline: none;
+  border: none;
+}
+.login_button:hover{
+  font-weight: bold;
+}
+
+.logo_text{
+  position: absolute;
+  left: 50px;
+  top: 30px;
+  border:none;
+  font-family: "Work Sans", sans-serif;
+  text-transform: uppercase;
+  font-size: 16px;
+  font-weight: bold;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: normal;
+  letter-spacing: 0.8px;
+  color: #000000;
+  outline: none;
+}
+
+
+.header{
+  width: 100%;
+  height:100px;
+  border-top: solid 7px #ffe74c;
+}
+
+.profileImage{
+  width: 47px;
+  height:47px;
+  top: 20px;
+  right: 150px;
+  background-color: gray;
+  border-radius: 100px;
+  position:absolute;
+}
+
+.profileName{
+  position: absolute;
+  right: 80px;
+  top: 20px;
+  border:none;
+  font-family: "Work Sans", sans-serif;
+  /* text-transform: uppercase; */
+  font-size: 16px;
+  font-weight: bold;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: normal;
+  letter-spacing: 0.8px;
+  color: #000000;
+  outline: none;
 }
