--- a/client/client/src/css/main.css
+++ b/client/client/src/css/main.css
@@ -13,6 +13,7 @@ font-stretch: normal;
 line-height: normal;
 letter-spacing: 0.3px;
 color: #000000;
+padding-top: 50px
 }
 
 h2 {
@@ -54,7 +55,7 @@ h2 {
 .NewButton{
 position: absolute;
 right:1%;
-top:10px;
+top:40px;
 width: 157px;
 height: 36px;
 border-radius: 4px;
@@ -214,13 +215,13 @@ position: absolute;
 
 .header{
   width: 100%;
-  height:100px;
+  height:50px;
   border-top: solid 7px #ffe74c;
 }
 
 .profileImage{
-  width: 47px;
-  height:47px;
+  width: 30px;
+  height:30px;
   top: 20px;
   right: 150px;
   background-color: gray;
@@ -231,7 +232,7 @@ position: absolute;
 .profileName{
   position: absolute;
   right: 80px;
-  top: 20px;
+  top: 10px;
   border:none;
   font-family: "Work Sans", sans-serif;
   /* text-transform: uppercase; */
