Debugged and updated the header bar.
• Made header bar a component on each module
• Fixed bug so it knows where it is
• Adjusted top margins so it looks nice everywhere
• Added link so 'creativity kernel' goes home

--- a/client/client/src/App.css
+++ b/client/client/src/App.css
@@ -48,6 +48,22 @@
   position: relative;
 }
 
+.go-home {
+  padding-top: 15px;
+  padding-left: 0px;
+  padding-right: 10px;
+  padding-bottom: 16px;
+  border-bottom: 4px solid transparent;
+  text-decoration: none;
+}
+
+.go-home:hover {
+  //background-color: #ffe74c;
+  text-decoration: none;
+  border-bottom: 4px solid transparent;
+  cursor: pointer;
+}
+
 .nav-link-1 {
   padding-top: 15px;
   padding-left: 10px;
